manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  # This name uniquely identifies the service
  name: covidsim-model-service
spec:
  type: NodePort
  ports:
    - port: 9001
      targetPort: 80
  selector:
    # Looks for labels `app:minio` in the namespace and applies the spec
    app: covidsim-model
